gcc/testsuite/gm2/iso/fail/badprocedure.mod
MODULE badprocedure ;

PROCEDURE foo ;
BEGIN
END foo ;

BEGIN
   Foo
END badprocedure.
